devops/db.yml
#################################
#        DATABASE SERVICE
#################################
apiVersion: v1
kind: Service
metadata:
  # this is the name we used in our Connection String
  name: db
  labels:
    app: realebot
    tier: database
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    name: http
    protocol: TCP
  selector:
    app: realebot
    tier: database

#################################
#        PERSISTENT VOLUME
#################################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: realebot
    tier: database
    version: stable
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: realebot
        tier: database
    spec:
      containers:
        - image: postgres:11.4-alpine
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-data
