devops/ui.yml
#################################
#        UI SERVICE
#################################
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: realebot
    tier: ui
    service: ui-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: realebot
    tier: ui
    service: ui-service


#################################
#        UI WORKLOAD
#################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deploy
  labels:
    app: realebot
    tier: ui
    service: ui-service
spec:
  selector:
    matchLabels:
      app: realebot
      tier: ui
      service: ui-service
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: realebot
        tier: ui
        service: ui-service
        version: stable
    spec:
      containers:
      - name: worker
        image: nvhoanganh1909/fullstack-ui:1
