devops/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dockerdemo-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: 7d8a674b9fec4dbebde2.australiaeast.aksapp.io
      http:
        paths:
          - path: /api
            backend:
              serviceName: backend-service
              servicePort: 80
          - path: /
            backend:
              serviceName: ui-service
              servicePort: 80
